crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_has_one_relations_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
	"github.com/google/uuid"
)

type User struct {
	ID                        uuid.UUID `gorm:"column:id;primaryKey;type:uuid" json:"id"`
	SettingsByCreatedByUserID *Settings `gorm:"foreignKey:CreatedByUserID" json:"-"`
	SettingsByUpdatedByUserID *Settings `gorm:"foreignKey:UpdatedByUserID" json:"-"`
}

func (User) TableName() string { return "user" }
