crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_has_one_relations_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model User {
  id String @id
  created_by_user_settings Settings? @relation("SettingsCreatedByUser")
  updated_by_user_settings Settings? @relation("SettingsUpdatedByUser")

  @@map("user")
}
