crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_has_one_relations_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "user")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: Uuid,
    #[sea_orm(has_one, relation_enum = "Settings", via_rel = "CreatedByUser")]
    pub created_by_user: HasOne<super::settings::Entity>,
    #[sea_orm(has_one, relation_enum = "UpdatedByUser", via_rel = "UpdatedByUser")]
    pub updated_by_user: HasOne<super::settings::Entity>,
}

vespera::schema_type!(Schema from Model, name = "UserSchema");
impl ActiveModelBehavior for ActiveModel {}
