crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_reverse_relations_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 440
expression: rendered
---
export const user = pgTable("user", {
  id: uuid("id").primaryKey(),
});

export const userRelations = relations(user, ({ one, many }) => ({
  preferredUserProfile: many(profile, { relationName: "ProfilePreferredUser" }),
  backupUserProfile: many(profile, { relationName: "ProfileBackupUser" }),
}));
