crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@multiple_reverse_relations_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model User {
  id String @id
  preferred_user_profile Profile[] @relation("ProfilePreferredUser")
  backup_user_profile Profile[] @relation("ProfileBackupUser")

  @@map("user")
}
