crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@not_junction_fk_not_in_pk_another_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const another = pgTable("another", {
  id: integer("id").primaryKey(),
});

export const anotherRelations = relations(another, ({ one, many }) => ({
  notJunction: many(notJunction),
}));
