crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@not_junction_fk_not_in_pk_another_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Another struct {
	ID           int32         `gorm:"column:id;primaryKey" json:"id"`
	NotJunctions []NotJunction `gorm:"foreignKey:AnotherID" json:"-"`
}

func (Another) TableName() string { return "another" }
